load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["assertion.go"],
    importpath = "github.com/dayfine/base/base/testing",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_d4l3k_messagediff//:go_default_library",
        "@com_github_google_go-cmp//cmp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["assertion_test.go"],
    embed = [":go_default_library"],
)
